# agros_paths

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: example.yaml  north_slope.yaml  reservoir.yaml  test.yaml
launch/: follower.launch  generator.launch  path.launch
scripts/: find_zone.py  follow.py  generate.py
src/agros_paths/: __init__.py  path_follower.py  path_generator.py
srv/: GeneratePath.srv
